--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <link rel="icon" href="/favicon.svg" type="image/svg+xml">
   <title>Minesweeper</title>
   <meta name="description" content="Opinionated Vite Starter Template">
+  <script type="module" crossorigin src="/assets/index.43468861.js"></script>
+  <link rel="modulepreload" href="/assets/vendor.1e1ae644.js">
+  <link rel="stylesheet" href="/assets/index.308c43dd.css">
 </head>
 <body class="font-sans dark:text-white dark:bg-hex-121212">
   <div id="app"></div>
@@ -17,6 +20,6 @@
         document.documentElement.classList.toggle('dark', true)
     })()
   </script>
-  <script type="module" src="/src/main.ts"></script>
+  
 </body>
 </html>
